@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-02T01:49:22Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "timestamp" : "2022-08-15T16:22:04Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
