@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-08-15T01:39:37Z",
+  "timestamp" : "2022-08-15T16:22:04Z",
   "count_outdated" : 456,
   "uniques_outdated" : 261,
-  "count" : 490,
+  "count" : 489,
   "uniques" : 283,
   "clones" : [
     {
       "timestamp": "2022-08-01T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
